[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty_drones = { git = "https://github.com/matteo-dinoia/rusty-drones.git", branch = "main" }
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" }
rusty_tester = { git = "https://github.com/matteo-dinoia/rusty_tester.git", branch = "main" }

getdroned = { git = "https://github.com/GetDroned/Drone.git", features = ["log"] }
rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git"}